--- a/.github/workflows/autoReserve.yml
+++ b/.github/workflows/autoReserve.yml
@@ -8,9 +8,9 @@ on:
     branches: [ "master" ]
     paths:
       - '.github/workflows/**'
-  schedule:
-    - cron: '10 0,1 * * *'
-    - cron: '10 6,7 * * 0'
+  # schedule:
+  #   - cron: '10 0,1 * * *'
+  #   - cron: '10 6,7 * * 0'
 
 env:
   TZ: Asia/Shanghai
